unpackaged/objects/Return_Auth_NAImp__c.object
<CustomObject>
  <description>Used as a database to track the return of product to North America Implants Customer Service.
This is a Master-Detail object to the Account and will have a Parent-Child relationship to "Return Issues" which will prompt the Field Team to decide actions to take when a return has issues.</description>
  <fields>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Return Authorizations</relationshipLabel>
    <relationshipName>Return_Authorizations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
  </fields>
  <fields>
    <fullName>Clinical_District_Manager__c</fullName>
    <formula>Account__r.Owner.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clinical District Manager</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Customer_Service_Agent_Completed_Return__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Service Agent Completed Return</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Return_Authorizations</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Date_Time_Completed__c</fullName>
    <label>Date/Time Completed</label>
    <type>DateTime</type>
  </fields>
  <fields>
    <fullName>Date_Time_Opened__c</fullName>
    <defaultValue>$System.OriginDateTime</defaultValue>
    <label>Date/Time Opened</label>
    <type>DateTime</type>
  </fields>
  <fields>
    <fullName>Description_Notes__c</fullName>
    <label>Description/Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Region__c</fullName>
    <formula>Account__r.Owner.User_Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Return_to_Customer_Tracking_Number__c</fullName>
    <label>Return to Customer Tracking Number</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>1 - New</fullName>
        </value>
        <value>
          <fullName>2 - In Process</fullName>
        </value>
        <value>
          <fullName>3 - Awaiting Approval</fullName>
        </value>
        <value>
          <fullName>4 - Completed</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <label>Return Authorizations</label>
  <nameField>
    <displayFormat>RA-{00000000}</displayFormat>
    <label>Return Authorization</label>
    <type>AutoNumber</type>
  </nameField>
  <pluralLabel>Return Authorizations</pluralLabel>
  <sharingModel>ControlledByParent</sharingModel>
</CustomObject>